src/test/deca/codegen/valid/unaire.ass
; Main Program
	TSTO #2
	BOV pile_pleine
	ADDSP #2
; start main program
; Main program
; Beginning of main instructions:
	LOAD #10, R3
	STORE R3, 1(GB)
	LOAD #0x1.91eb86p1, R3
	STORE R3, 2(GB)
	LOAD 2(GB), R1
	OPP R1, R1
	LOAD 1(GB), R3
	LOAD #2, R4
	ADD R4, R3
	BOV overflow_arith
	FLOAT R3, R3
	MUL R3, R1
	BOV overflow_arith
	STORE R1, 2(GB)
	LOAD 2(GB), R1
	WFLOAT
	HALT
; Message d'erreurs
pile_pleine:
	WSTR "Erreur : debordement de pile"
	WNL
	ERROR
overflow_arith:
	WSTR "Erreur : overflow_arithmetique"
	WNL
	ERROR
; end main program
